--- a/package.json
+++ b/package.json
@@ -3,17 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "classnames": "^2.3.2",
+    "env-cmd": "^10.1.0",
+    "js-cookie": "^3.0.5",
+    "js-file-download": "^0.4.12",
+    "moment": "^2.29.4",
+    "postcss": "^8.4.24",
+    "prop-types": "^15.8.1",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -e local react-scripts start",
+    "dev": "env-cmd -e dev react-scripts start",
+    "prod": "env-cmd -e prod react-scripts start",
+    "linode": "env-cmd -e linode react-scripts start",
+    "ngrok": "env-cmd -e ngrok react-scripts start",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build && gulp licenses",
+    "build-dev": "GENERATE_SOURCEMAP=false env-cmd -e dev react-scripts build && gulp licenses",
+    "build-prod": "GENERATE_SOURCEMAP=false env-cmd -e prod react-scripts build && gulp licenses",
+    "build-linode": "GENERATE_SOURCEMAP=false env-cmd -e linode react-scripts build && gulp licenses",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +52,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "tailwindcss": "^3.3.2"
   }
 }
