--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -11,7 +11,7 @@
     },
     "prod": {
         "REACT_APP_ENVIRONMENT": "PRODUCTION",
-        "REACT_APP_API_BASE_URL": "http://numbers-api.artdexandcognoscis.com",
+        "REACT_APP_API_BASE_URL": "https://gid.artdexandcognoscis.com",
         "REACT_APP_SENTRY_SDK": "https://33a7edd8b129416ab6b7702909b8cf69@o144445.ingest.sentry.io/5801144"
     },
     "linode": {
