--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.14.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "firebase": "^10.3.0"
   },
   "scripts": {
     "start": "env-cmd -e local react-scripts start",
