--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@mui/material": "^5.14.7",
+    "@mui/styled-engine-sc": "^5.14.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
     "env-cmd": "^10.1.0",
+    "firebase": "^10.3.0",
     "js-cookie": "^3.0.5",
     "js-file-download": "^0.4.12",
     "moment": "^2.29.4",
@@ -20,9 +25,9 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "styled-components": "^5.3.11",
     "tailwind-merge": "^1.14.0",
-    "web-vitals": "^2.1.4",
-    "firebase": "^10.3.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "env-cmd -e local react-scripts start",
