--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -1,7 +1,7 @@
 {
     "local": {
         "REACT_APP_ENVIRONMENT": "LOCAL",
-        "REACT_APP_API_BASE_URL": "http://192.168.1.25:8000",
+        "REACT_APP_API_BASE_URL": "http://192.168.1.25:8080",
         "REACT_APP_SENTRY_SDK": "https://33a7edd8b129416ab6b7702909b8cf69@o144445.ingest.sentry.io/5801144"
     },
     "dev": {
@@ -21,7 +21,7 @@
     },
     "ngrok": {
         "REACT_APP_ENVIRONMENT": "NGROK",
-        "REACT_APP_API_BASE_URL": "https://b0ae-2401-4900-1c21-2d85-549a-1552-ac85-6565.ngrok-free.app",
+        "REACT_APP_API_BASE_URL": "https://radically-vital-ape.ngrok-free.app",
         "REACT_APP_SENTRY_SDK": "https://33a7edd8b129416ab6b7702909b8cf69@o144445.ingest.sentry.io/5801144"
     }
 }
