--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
     "tailwind-merge": "^1.14.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "highcharts": "^11.1.0",
+    "highcharts-react-official": "^3.2.1"
   },
   "scripts": {
     "start": "env-cmd -e local react-scripts start",
