--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
     "env-cmd": "^10.1.0",
+    "highcharts": "^11.1.0",
+    "highcharts-react-official": "^3.2.1",
     "js-cookie": "^3.0.5",
     "js-file-download": "^0.4.12",
     "moment": "^2.29.4",
@@ -20,15 +22,14 @@
     "prop-types": "^15.8.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
     "tailwind-merge": "^1.14.0",
-    "web-vitals": "^2.1.4",
-    "highcharts": "^11.1.0",
-    "highcharts-react-official": "^3.2.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "env-cmd -e local react-scripts start",
