--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@mui/material": "^5.14.7",
     "@mui/styled-engine-sc": "^5.14.7",
+    "@mui/x-date-pickers": "^6.16.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.10",
     "env-cmd": "^10.1.0",
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.1",
