--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@mui/material": "^5.14.7",
     "@mui/styled-engine-sc": "^5.14.7",
     "@mui/x-date-pickers": "^6.16.0",
+    "@mui/x-date-pickers-pro": "^6.16.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@mui/icons-material": "^5.14.12",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.10",
     "env-cmd": "^10.1.0",
