--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.7",
     "@mui/styled-engine-sc": "^5.14.7",
     "@mui/x-date-pickers": "^6.16.0",
@@ -13,7 +14,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@mui/icons-material": "^5.14.12",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.10",
     "env-cmd": "^10.1.0",
@@ -24,8 +24,12 @@
     "moment": "^2.29.4",
     "postcss": "^8.4.24",
     "prop-types": "^15.8.1",
+    "papaparse": "^5.3.2",
+    "xlsx": "^0.18.5",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
