--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.10",
     "env-cmd": "^10.1.0",
@@ -22,10 +23,9 @@
     "js-cookie": "^3.0.5",
     "js-file-download": "^0.4.12",
     "moment": "^2.29.4",
+    "papaparse": "^5.3.2",
     "postcss": "^8.4.24",
     "prop-types": "^15.8.1",
-    "papaparse": "^5.3.2",
-    "xlsx": "^0.18.5",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
@@ -36,7 +36,9 @@
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
     "tailwind-merge": "^1.14.0",
-    "web-vitals": "^2.1.4"
+    "tinymce": "^6.7.0",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "env-cmd -e local react-scripts start",
