--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.10",
     "env-cmd": "^10.1.0",
+    "font-awesome": "^4.7.0",
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.1",
     "js-cookie": "^3.0.5",
